# jamovi

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .jshintignore  .jshintrc  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  build.json  compilerr.js  configure  configure.bat  docker-compose.yaml  i18n.js  index.js  layoutupdatecheck.js  package-lock.json  package.json  pyproject.toml  setup.cfg  shell.sh  snapshots.js  sourcify.js  uicompiler.js  version
.github/workflows/: codeql.yml  snyk-security.yml  trivy.yml  veracode.yml
analyses/: build.js
analyses/base/: descriptives.src.js  module.json
analyses/common/: bool.js  int.js  option.js  options.js  optionsview.js  variable.js  variables.js
client/: .mocharc.json  analysisui.html  index.html  package-lock.json  package.json  recorder.html  release.sh  resultsview.html  tsconfig.json  vite.config.mts  vite.config.ts
client/analysisui/: actions.js  actions.ts  applymagicevents.js  applymagicevents.ts  childlayoutsupport.js  childlayoutsupport.ts  contentselector.css  contentselector.js  contentselector.ts  controlbase.js  controlbase.ts  controlcontainer.css  controlcontainer.js  controlcontainer.ts  controlmanager.js  customcontrol.js  customcontrol.ts  defaultcontrols.js  defaultcontrols.ts  dragndrop.js  dragndrop.ts  enumarraypropertyfilter.js  enumarraypropertyfilter.ts  enumpropertyfilter.js  enumpropertyfilter.ts  events.js  format.js  format.ts  formatdef.js  formatdef.ts  gridactionbutton.css  gridactionbutton.js  gridactionbutton.ts  gridcheckbox.css  gridcheckbox.js  gridcheckbox.ts  gridcombobox.css  gridcombobox.js  gridcombobox.ts  gridcontrol.css  (+112 more)
client/common/: contextmenutypes.ts  eventmap.ts  focusloop.css  focusloop.js  focusloop.ts  formatting.js  formatting.ts  highcontrast.ts  htmlelementcreator.ts  htmlify.ts  hydrate.ts  (+17 more)
core/: Makefile
docker/: base-deps-sources.json  deps-Dockerfile  install-packages.py  jamovi-Dockerfile  jmv-deps-sources.json  requirements.txt
electron/: main.js  package-lock.json  package.json
engine/: Makefile  Makefile.in  configure  configure.bat
examples/: Bugs (Ryan, Wilde & Crist, 2013).csv  Motor Trend Car Road Tests.csv  index.yaml
jamovi-compiler/: body.template  compiler.js  compilerr.js  header.template  i18n.js  index.js  installer.js  options.template  package-lock.json  package.json  parser.js  pkg.template  snapshots.js  sourcify.js  src.template  untranslatable.txt  utils.js
jmvcore/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  jmvcore.Rproj
libsilky/: setup.py  silky.pyx
opensesame/: .Rbuildignore  .gitignore  DESCRIPTION
platform/: build  env.conf  jamovi  jamovi-dataset.xml  jamovi.desktop  menu  ubuntu-start.sh  ubuntu.conf
schemas/: optionschemas.yaml
server/: __init__.py  analyses.py  application.py  clientcoms.proto  clientcoms.py  clientconnection.py  coms.proto  coms.py  enginecoms.proto  enginecoms.py  enginemanager.py  fileio.py  instance.py  jamovi.proto  main.py  modules.py  options.py  requirements.in  requirements.txt  server.py  settings.py  setup.py  silkycoms.proto  silkycoms.py  silkycoms_pb2.py
test/: 040-i18n.test.mjs
(+819 files in other folders)
